--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "league/flysystem-cached-adapter": "^1.0",
         "symfony/dom-crawler": "^4.1",
         "arrilot/laravel-widgets": "^3.12",
-        "spatie/laravel-permission" : "^2.12"
+        "spatie/laravel-permission" : "^2.12",
+        "tanwencn/laravel-elfinder" : "^0.1"
     },
     "autoload": {
         "psr-4": {
