--- a/composer.json
+++ b/composer.json
@@ -12,15 +12,15 @@
         }
     ],
     "require": {
-        "laravel/framework" : "^5.5",
+        "laravel/framework" : "^5.5|^6.0",
         "studio-42/elfinder": "~2.1.10",
         "barryvdh/elfinder-flysystem-driver": "^0.2.1",
         "league/flysystem": "^1.0",
         "league/flysystem-cached-adapter": "^1.0",
         "symfony/dom-crawler": "^4.1",
         "arrilot/laravel-widgets": "^3.12",
-        "spatie/laravel-permission" : "^2.12",
-        "tanwencn/laravel-elfinder" : "^1.0.1"
+        "spatie/laravel-permission" : "^2.12|^3.0",
+        "tanwencn/laravel-elfinder" : "^1.0"
     },
     "autoload": {
         "psr-4": {
