--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,10 @@
         }
     ],
     "require": {
-        "laravel/framework" : "^5.5|^6.0",
+        "laravel/framework" : "^6.0",
         "symfony/dom-crawler": "^4.1",
         "spatie/laravel-permission" : "^2.12|^3.0",
-        "tanwencn/laravel-elfinder" : "^1.0"
+        "tanwencn/laravel-elfinder" : "^2.0"
     },
     "autoload": {
         "psr-4": {
