--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {
         "laravel/framework" : "^6.0",
         "symfony/dom-crawler": "^4.1",
-        "spatie/laravel-permission" : "^2.12|^3.0",
+        "spatie/laravel-permission" : "^3.0",
         "tanwencn/laravel-elfinder" : "^2.0"
     },
     "autoload": {
