--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/framework" : "^6.0",
         "symfony/dom-crawler": "^4.1",
         "spatie/laravel-permission" : "^3.0",
-        "tanwencn/laravel-elfinder" : "^2.0"
+        "tanwencn/laravel-elfinder" : "^2.0",
+        "spatie/laravel-blade-x": "^2.6"
     },
     "autoload": {
         "psr-4": {
