--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "resolve-url-loader": "^3.1.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "summernote": "^0.8.18",
     "vue-template-compiler": "^2.6.11"
   }
 }
